objects/OBT_Information__c.object
<CustomObject>
    <label>OBT Information</label>
    <nameField>
        <label>OBT Information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OBT Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>OBT Information</relationshipLabel>
        <relationshipName>OBT_Information</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <label>Legacy ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bilingual_OBT_Site_Required__c</fullName>
        <label>Bilingual OBT Site Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Low_Fare_Threshold_Settings__c</fullName>
        <label>Low Fare Threshold Settings</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bilingual_Visionlink_Required__c</fullName>
        <label>Bilingual Visionlink Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>